added CSS filters content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="styles/transitions.css" rel="stylesheet">
     <link href="styles/transform.css" rel="stylesheet">
     <link href="styles/animations.css" rel="stylesheet">
+    <link href="styles/filters.css" rel="stylesheet">
     <title>MAD9013 - Week 10</title>
 </head>
 <body>
@@ -61,6 +62,22 @@
             <p>The element uses an <code>animation</code> property that can set the values for <code>duration</code>, <code>timing-function</code>, <code>delay</code>, <code>iteration-count</code>, <code>direction</code>,<code>play-state</code>, and <code>name</code></p>
             <div class="anim-container">
                 <div class="anim-box">&#1422;</div>
+            </div>
+        </section>
+        <section>
+            <h2>CSS Filters</h2>
+            <p>CSS filters allow you apply various visual effects (like Photoshop)</p>
+            <div class="filter-container">
+                <div>brightness</div>
+                <div>contrast</div>
+                <div>greyscale</div>
+                <div>hue-rotate</div>
+                <div>saturate</div>
+                <div>sepia</div>
+                <div>blur</div>
+                <div>drop-shadow</div>
+                <div>invert</div>
+                <div>opacity</div>
             </div>
         </section>
         <section>
